--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.7"
